# factory-planner

./: CMakeLists.txt  LICENSE  main.cpp  requirements.md
data/: satisfactory.json
src/: main.cpp
src/common/: GameData.h  NodeType.h
src/core/: Connection.h  FactoryGraph.cpp  FactoryGraph.h  FactorySolver.cpp  FactorySolver.h  Machine.h  Node.h  Port.h  Recipe.h  Resource.h
src/gui/: Application.cpp  Application.h  FactoryNodeEditor.cpp  FactoryNodeEditor.h
src/utils/: GameDataLoader.cpp  GameDataLoader.h  JsonLoader.cpp  JsonLoader.h  LpSolver.cpp  LpSolver.h
